# seorankpulse

./: .dockerignore  .env.example  .gitignore  BRANDING.md  COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANUAL_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REBRANDING_COMPLETE.md  RUN_LOCAL.md  SCREAMING_FROG_FEATURES_IMPLEMENTED.md  STARTUP_GUIDE.md  START_HERE.md  TROUBLESHOOTING.md  docker-compose.simple.yml  docker-compose.yml  start.ps1
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260128_initial_migration.py
backend/app/: main.py
backend/app/api/v1/: advanced_analysis.py  ai.py  analysis.py  auth.py  collaboration.py  competitive.py  crawls.py  dashboards.py  export.py  list_crawl.py  monitoring.py  projects.py  serp.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  crawl_job.py  dashboard.py  page.py  project.py  team.py  user.py
backend/app/schemas/: collaboration.py  crawl.py  dashboard.py  page.py  project.py  user.py
backend/app/services/ai/: __init__.py  alt_text_generator.py  content_scorer.py
backend/app/services/analyzer/: accessibility.py  content.py  duplicate_detector.py  elasticsearch_client.py  image_analyzer.py  on_page.py  redirect_chain.py  semantic.py  technical.py
backend/app/services/competitive/: __init__.py  analyzer.py  (+1 more)
backend/app/workers/: ai_tasks.py  analysis_tasks.py  celery_app.py  crawl_tasks.py  monitoring_tasks.py  report_tasks.py  serp_tasks.py
backend/tests/: conftest.py  test_accessibility.py  test_api_auth.py  test_collaboration.py  test_crawler.py  test_dashboards.py  test_duplicate_detection.py  test_image_analysis.py  test_lighthouse.py  test_monitoring.py  test_serp_tracker.py
(+55 files in other folders)
